# cmake-example-lib

./: CMakeLists.txt  README.md
include/example-lib/: example-lib.hpp
src/: example-lib.cpp
